# sisyl

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
grammar/: SiSyL.g4
include/: ast.h  ast_builder.h  code_generator.h  parser_driver.h  semantic_analyzer.h  type.h
src/: ast.cpp  ast_builder.cpp  code_generator.cpp  main.cpp  parser_driver.cpp  semantic_analyzer.cpp
tests/: codegen_tests.cpp  parser_tests.cpp  semantic_tests.cpp  test_program.sisyl
